assets/css/catalog.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Montserrat;
}

body {
    background-color: rgb(255, 250, 245);
    font-family: Montserrat;
}

.container {
    height: 100vh;
}

.header {
    width: 100%;
    height: 80px;
    background-color: rgb(255, 255, 255);
    border-bottom: 2px solid whitesmoke;
    padding-left: 214px;
    padding-right: 64px;
    z-index: 99;
    position: fixed;
}

.header-list {
    width: 374px;
    height: 24px;
    display: flex;
    gap: 21px;
    flex-direction: row;
    align-items: center;
}

.header-list li a {
    color: rgb(36, 20, 0);
    font-size: 12px;
    font-weight: 400;
}

.header-list li a:hover {
    color: rgb(225, 106, 0);
}

.header-list li:nth-child(2) a {
    color: rgb(225, 106, 0);
    font-weight: 700;
    text-decoration-line: underline;
}

.header-list li:nth-child(2) a:hover {
    color: #000;
    text-decoration: none;
}

.swiper-all,
.swiper-besteller,
.swiper-newReleases {
    width: 80%;
    height: 400px;
    opacity: 0;
    transition: 2s;
    padding: 0;
    margin: 0;
    display: flex;
}

.leftArrow,
.rightArrow,
.leftArrowSec2,
.rightArrowSec2,
.leftArrowSec3,
.rightArrowSec3 {
    position: absolute;
    width: 70px;
    cursor: pointer;
}

.leftArrow,
.leftArrowSec2,
.leftArrowSec3 {
    left: 80px;
    filter: drop-shadow(-10px 1px 3px rgb(225, 106, 0));
}

.rightArrow,
.rightArrowSec2,
.rightArrowSec3 {
    right: 80px;
    filter: drop-shadow(10px 1px 3px rgb(225, 106, 0));
}

.leftArrow,
.rightArrow {
    top: 300px;
}

.swiper-wrapper {
    display: flex;
    align-items: center;
    gap: 30px;
}

.wrapper-besteller {
    justify-content: center;
}

.bookNameSwiper {
    color: rgb(36, 20, 0);
    font-family: "Montserrat";
    font-size: 14px;
    font-weight: 700;
    line-height: 196.19%;
    overflow: hidden;
    letter-spacing: 0%;
    margin: 0px auto;
    width: 90%;
    height: 20px;
    text-align: center;
}

.authorNameSwiper {
    color: rgb(36, 20, 0);
    font-family: "Montserrat";
    font-size: 12px;
    font-weight: 400;
    line-height: 196.19%;
    letter-spacing: 0%;
    width: 100%;
    height: 20px;
    overflow: hidden;
    text-align: center;
}

.imageSwiperDiv {
    position: relative;
    padding: 10px 10px;
    width: 80%;
    height: 70%;
}

.imageSwiper {
    width: 100%;
    height: 100%;
    filter: drop-shadow(10px 10px 20px black);
}

.imageSwiperDiv .newBook {
    display: none;
}

.imageSwiperDiv .span {
    display: block;
    position: absolute;
    right: 10px;
    border-radius: 3px;
    box-shadow: 0px 3px 8px 0px rgba(225, 106, 0, 0.19);
    background-color: rgb(235, 87, 87);
    color: rgb(255, 255, 255);
    font-family: Montserrat;
    font-size: 9px;
    font-weight: 900;
    line-height: 196.19%;
    letter-spacing: 0%;
    text-align: left;
    text-transform: uppercase;
    padding: 2px 5px;
    z-index: 99;
}

.slideDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
    width: 20%;
    height: 98%;
}

.slideDiv .readMoreBtn {
    width: 80%;
    background-color: rgb(225, 106, 0);
    border: 0;
    border-radius: 3px;
    box-shadow: 0px 3px 8px 0px rgba(225, 106, 0, 0.19);
    color: #fff;
    font-family: "Montserrat";
    font-size: 12px;
    font-weight: 900;
    line-height: 196.19%;
    letter-spacing: 0%;
    margin-bottom: 20px;
}

.categoriesDiv {
    width: 80%;
    display: flex;
    align-items: center;
    justify-self: flex-start;
}

.categoriesDiv h1 {
    color: rgb(36, 20, 0);
    font-family: Montserrat;
    font-size: 25px;
    font-weight: 900;
    line-height: 196.19%;
    letter-spacing: 0%;
}

.categories {
    gap: 40px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    max-width: 400px;
    overflow-x: auto;
}

.categories li {
    list-style: none;
    color: rgb(36, 20, 0);
    font-family: Montserrat;
    font-size: 13px;
    font-weight: 400;
    line-height: 196.19%;
    letter-spacing: 0%;
    cursor: pointer;
    transition: 0.5s;
    padding-top: 25px;
    padding-bottom: 20px;
}

.categories li:hover,
.categoriesList a:hover {
    text-decoration: underline;
    transition: 0.5s;
}

.allBooksSection {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 100%;
    height: 530px;
    margin-bottom: 128px;
    padding-top: 80px;
    gap: 20px;
}

.categoriesList {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 271px;
}

.categoriesList a {
    text-decoration: none;
    color: rgb(36, 20, 0);
    font-family: Montserrat;
    font-size: 13px;
    font-weight: 400;
    line-height: 196.19%;
    letter-spacing: 0%;
    cursor: pointer;
    transition: 0.5s;
    margin-right: 20px;
}

.moreInfo {
    display: none;
    opacity: 0;
    height: 100vh;
    justify-content: space-between;
    align-items: center;
    margin: 0px 182px 0px 212px;
    animation: fadeIn 2s ease forwards;
}

.moreInfo .leftSideMoreInfo {
    width: 56%;
    height: 529px;
}

.moreInfo .rightSideMoreInfo {
    width: 30%;
    height: 529px;
}

.moreInfo .bookImageMoreInfo {
    width: 100%;
    height: 100%;
}

.moreInfo .backBtn {
    text-decoration: none;
    border-radius: 3px;
    box-shadow: 0px 3px 8px 0px rgba(225, 106, 0, 0.19);
    background-color: rgb(225, 106, 0);
    width: 100px;
    height: 29px;
    color: rgb(255, 255, 255);
    font-family: Montserrat;
    font-size: 12px;
    font-weight: 900;
    line-height: 196.19%;
    letter-spacing: 0%;
    padding: 10px 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 80px;
}
/* ... */

